--- a/Night Owl/Base.lproj/Main.storyboard
+++ b/Night Owl/Base.lproj/Main.storyboard
@@ -307,14 +307,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                         <sections>
-                            <tableViewSection headerTitle="Payment Information" id="uu2-zj-aA7">
+                            <tableViewSection headerTitle="Your Information" id="uu2-zj-aA7">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" textLabel="ZS5-fJ-X3X" detailTextLabel="E20-7z-gWw" style="IBUITableViewCellStyleValue1" id="HxY-60-E4k">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="ZS5-fJ-X3X" detailTextLabel="E20-7z-gWw" style="IBUITableViewCellStyleValue1" id="HxY-60-E4k">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HxY-60-E4k" id="QUl-g9-i0N">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Question Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZS5-fJ-X3X">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Full Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZS5-fJ-X3X">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -531,7 +531,7 @@
                         <outlet property="cardLabel" destination="aO0-ay-iDN" id="6k4-CH-PeC"/>
                         <outlet property="debugAccount" destination="iC7-de-aHd" id="m3g-sG-Uag"/>
                         <outlet property="freeQuestionsLabel" destination="rUs-JF-STD" id="beh-MC-ReU"/>
-                        <outlet property="questionPrice" destination="E20-7z-gWw" id="IY7-tY-oO4"/>
+                        <outlet property="userName" destination="E20-7z-gWw" id="lw8-LM-0ce"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R49-SA-tJB" userLabel="First Responder" sceneMemberID="firstResponder"/>
